@@ -2,8 +2,11 @@
 - API Addition: added GdxAI service locator that reduces coupling with libgdx and allows you to use gdx-ai
   out of a libgdx application without having to initialize libgdx environment, so avoiding the waste of resources
   and the need of native libraries; see https://github.com/libgdx/gdx-ai/wiki/Initializing-and-Using-gdxAI
-- API Change: removed delta time argument from the update method of the MessageDispatcher; the new GdxAI.getTimepiece().getTime() is internally used instead.
-- API Change: Behavior tree API revised and improved
+- API Change and Addition: Messaging API
+  * Removed delta time argument from the update method of the MessageDispatcher; the new GdxAI.getTimepiece().getTime() is internally used instead.
+  * Added return receipt support.
+  * The report method of PendingMessageCallback now takes an additional argument for the return receipt.
+- API Change and Addition: Behavior tree API revised and improved, see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
   * Now tasks have a status that is updated each time they run.
   * Added enum support in behavior tree files.
   * Now parallel task can specify sequence or selector policy.
